--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <version>5.1.49</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!--验证码依赖-->
+        <dependency>
+            <groupId>com.github.whvcse</groupId>
+            <artifactId>easy-captcha</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
