--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:mappers/*.xml
+#????????100M??????????????1000M?
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size = 100MB
+
